--- a/primary-config-store/application.yml
+++ b/primary-config-store/application.yml
@@ -5,7 +5,7 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/Harith93uom/spring-cloud-config-store.git
+          uri: https://github.com/Harith93uom/spring-cloud-config-store
           search-paths:
            - '*service'
 
